--- a/otrs-image/Dockerfile
+++ b/otrs-image/Dockerfile
@@ -15,20 +15,28 @@ ENV LC_ALL=en_US.UTF-8
 
 #add user
 #USER otrs 
-RUN useradd -d /opt/otrs -c 'OTRS user' otrs && usermod -G www-data otrs
+#RUN useradd -d /opt/otrs -c 'OTRS user' otrs && usermod -G www-data otrs
 
-
+#fix locale
+#RUN /usr/sbin/locale-gen "en_US.UTF-8" && /usr/sbin/dpkg-reconfigure locales
+RUN apt update
+RUN apt install apt-utils locales -y
 RUN apt update && apt install libdigest-md5-perl git \
     libapache2-mod-perl2 libdbd-mysql-perl libtimedate-perl libnet-dns-perl libnet-ldap-perl \
     libio-socket-ssl-perl libpdf-api2-perl libdbd-mysql-perl libsoap-lite-perl libtext-csv-xs-perl \
     libjson-xs-perl libapache-dbi-perl libxml-libxml-perl libxml-libxslt-perl libyaml-perl \
     libarchive-zip-perl libcrypt-eksblowfish-perl libencode-hanextra-perl libmail-imapclient-perl \
-    libtemplate-perl -y
+    libtemplate-perl libdatetime-perl -y
+
+
 
 # Add scripts and function files
 #COPY *.sh /
 #RUN mkdir $OTRS_ROOT && cd $OTRS_ROOT && git clone $OTRS_GIT
 COPY ./otrs $OTRS_ROOT
+
+#  Install Additional Perl Modules
+RUN perl $OTRS_ROOT/bin/otrs.CheckModules.pl
 
 #Activate Default Config File
 RUN cp $OTRS_ROOT/Kernel/Config.pm.dist $OTRS_ROOT/Kernel/Config.pm
