--- a/otrs-image/Dockerfile
+++ b/otrs-image/Dockerfile
@@ -8,7 +8,7 @@ ENV OTRS_BACKUP_DIR "/var/otrs/backups"
 #ENV OTRS_CONFIG_DIR "${OTRS_ROOT}Kernel"
 ENV OTRS_CONFIG_MOUNT_DIR "/config/"
 ENV OTRS_SKINS_MOUNT_DIR "/skins/"
-ENV SKINS_PATH "${OTRS_ROOT}/var/httpd/htdocs/skins/"
+#ENV SKINS_PATH "${OTRS_ROOT}/var/httpd/htdocs/skins/"
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US.UTF-8
 ENV LC_ALL=en_US.UTF-8
