--- a/otrs-image/Dockerfile
+++ b/otrs-image/Dockerfile
@@ -21,6 +21,9 @@ ENV LC_ALL=en_US.UTF-8
 #RUN /usr/sbin/locale-gen "en_US.UTF-8" && /usr/sbin/dpkg-reconfigure locales
 RUN apt update
 RUN apt install apt-utils locales -y
+RUN /usr/sbin/locale-gen "en_US.UTF-8" && /usr/sbin/dpkg-reconfigure locales
+
+
 RUN apt update && apt install libdigest-md5-perl git \
     libapache2-mod-perl2 libdbd-mysql-perl libtimedate-perl libnet-dns-perl libnet-ldap-perl \
     libio-socket-ssl-perl libpdf-api2-perl libdbd-mysql-perl libsoap-lite-perl libtext-csv-xs-perl \
