--- a/otrs-image/Dockerfile
+++ b/otrs-image/Dockerfile
@@ -1,10 +1,12 @@
 #OTRS ticketing system docker image.
+# https://doc.otrs.com/doc/manual/admin/6.0/en/html/manual-installation-of-otrs.html
 FROM ubuntu:latest
 MAINTAINER Pavel Fomichev <p.n.fomichev@gmail.com>
 #ENV OTRS_VERSION=6.0.17-01
 ENV OTRS_GIT "https://github.com/OTRS/otrs.git"
 ENV OTRS_ROOT "/opt/otrs/"
-ENV OTRS_BACKUP_DIR "/var/otrs/backups"
+ENV DEBIAN_FRONTEND noninteractive
+#ENV OTRS_BACKUP_DIR "/var/otrs/backups"
 #ENV OTRS_CONFIG_DIR "${OTRS_ROOT}Kernel"
 ENV OTRS_CONFIG_MOUNT_DIR "/config/"
 ENV OTRS_SKINS_MOUNT_DIR "/skins/"
@@ -15,7 +17,8 @@ ENV LC_ALL=en_US.UTF-8
 
 #add user
 #USER otrs 
-#RUN useradd -d /opt/otrs -c 'OTRS user' otrs && usermod -G www-data otrs
+#RUN useradd -d ${OTRS_ROOT} -c 'OTRS user' otrs && usermod -G www-data otrs
+RUN echo otrrs root directory: ${OTRS_ROOT}
 
 #fix locale
 #RUN /usr/sbin/locale-gen "en_US.UTF-8" && /usr/sbin/dpkg-reconfigure locales
@@ -29,27 +32,43 @@ RUN apt update && apt install libdigest-md5-perl git \
     libio-socket-ssl-perl libpdf-api2-perl libdbd-mysql-perl libsoap-lite-perl libtext-csv-xs-perl \
     libjson-xs-perl libapache-dbi-perl libxml-libxml-perl libxml-libxslt-perl libyaml-perl \
     libarchive-zip-perl libcrypt-eksblowfish-perl libencode-hanextra-perl libmail-imapclient-perl \
-    libtemplate-perl libcrypt-ssleay-perl -y
+    libtemplate-perl libcrypt-ssleay-perl libdatetime-perl libterm-ui-perl -y
 
 
 
 # Add scripts and function files
 #COPY *.sh /
 #RUN mkdir $OTRS_ROOT && cd $OTRS_ROOT && git clone $OTRS_GIT
-COPY ./otrs $OTRS_ROOT
+COPY ./otrs ${OTRS_ROOT}
 
 #  Install Additional Perl Modules
-RUN perl $OTRS_ROOT/bin/otrs.CheckModules.pl
+RUN perl ${OTRS_ROOT}bin/otrs.CheckModules.pl
 
 #Activate Default Config File
-RUN cp $OTRS_ROOT/Kernel/Config.pm.dist $OTRS_ROOT/Kernel/Config.pm
+RUN cp ${OTRS_ROOT}Kernel/Config.pm.dist ${OTRS_ROOT}Kernel/Config.pm
 
 #check perl modules
-RUN perl -cw $OTRS_ROOT/bin/cgi-bin/index.pl && perl -cw $OTRS_ROOT/bin/cgi-bin/customer.pl && perl -cw $OTRS_ROOT/bin/otrs.Console.pl
+RUN perl -cw ${OTRS_ROOT}bin/cgi-bin/index.pl && perl -cw ${OTRS_ROOT}bin/cgi-bin/customer.pl && perl -cw ${OTRS_ROOT}bin/otrs.Console.pl
 
 
 #install apache
 RUN apt install apache2 libapache2-mod-perl2 -y
+
+#configure apache
+RUN ln -s ${OTRS_ROOT}scripts/apache2-httpd.include.conf /etc/apache2/sites-enabled/zzz_otrs.conf
+
+#enable apache modules
+RUN a2enmod perl
+RUN a2enmod version
+RUN a2enmod deflate
+RUN a2enmod filter
+RUN a2enmod headers
+
+#restart apache
+RUN service apache2 restart
+
+#file permitions
+RUN cd ${OTRS_ROOT} && bin/otrs.SetPermissions.pl
 
 
 EXPOSE 80
